<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>TDT4100_project</groupId>
    <artifactId>ChessFX</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
 
    <name>ChessFX</name>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

   <dependencies>
 	<dependency>
		<groupId>org.openjfx</groupId>
	  <artifactId>javafx-fxml</artifactId>
	  <version>17-ea+8</version>
	</dependency>

	<!-- JUnit 5 -->
	<dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.7.0</version>
	</dependency>
  </dependencies>

  <build>
	<plugins>
	  <plugin>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.8.0</version>
		<configuration>
		  <release>17</release>
		</configuration>
	  </plugin>
	  <plugin>
		  <artifactId>maven-surefire-plugin</artifactId>
		  <version>3.0.0-M5</version>
		  <configuration>
			  <argLine>${argLine} --enable-preview</argLine>
		  </configuration>
	  </plugin>
	  <plugin>
		  <artifactId>maven-failsafe-plugin</artifactId>
		  <version>3.0.0-M5</version>
		  <configuration>
			  <argLine>${argLine} --enable-preview</argLine>
		  </configuration>
	  </plugin>

		<!-- JaCoCo code coverage -->
		<plugin>
		<groupId>org.jacoco</groupId>
		<artifactId>jacoco-maven-plugin</artifactId>
		<version>0.8.8</version>
		<configuration>
			<excludes>
					<exclude>chessfx/ui/*</exclude>
			</excludes>
	</configuration>
		<executions>
			<execution>
				<id>default-prepare-agent</id>
				<goals>
					<goal>prepare-agent</goal>
				</goals>
			 </execution>			 
			<execution>
				<id>jacoco-report</id>
				<goals>
					<goal>report</goal>
				</goals>
			</execution>
		</executions>
	</plugin>

	</plugins>
  </build>
</project>